# Units-Framework

./: .gitignore  Makefile  README.md  imgui.ini
internal/: CMakeLists.txt
internal/bash/: compile_bgfx.sh  compile_deps.sh  compile_imgui.sh  compile_sdl3.sh  compile_sdl3_image.sh  compile_sdl3_shaders.sh  compile_sdl_shadercross.sh
internal/src/: renderer.cpp  units_app.cpp  units_config.h.in  units_debug.cpp  units_inputs.cpp  units_inputs_old.cpp  units_stage.cpp  units_window.cpp
internal/src/units/: units.h  units_app.h  units_bit.h  units_config.h  units_debug.h  units_entry.h  units_inputs.h  units_inputs_old.h  units_list.h  units_macros.h  units_math.h  units_stage.h  units_str.h  units_types.h  units_window.h
internal/src/units/renderer/: renderer.h
src/: .gitignore  config.h.in  main.cpp
